--- a/image.qrc
+++ b/image.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>image/Media-play-icon.png</file>
         <file>image/pause-icon.png</file>
+        <file>image/service-512.png</file>
     </qresource>
 </RCC>
