--- a/displaycalibwin.ui
+++ b/displaycalibwin.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>Calib HSV Display</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="image.qrc">
+    <normaloff>:/image/calibration-icon1.png</normaloff>:/image/calibration-icon1.png</iconset>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
@@ -28,6 +32,8 @@
    </layout>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="image.qrc"/>
+ </resources>
  <connections/>
 </ui>
